isotope/local_gateways.yaml
# Gateway config, and associated virtual services

apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: entrypoint-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "grafana.local"
  gateways:
  - entrypoint-gateway
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: prom
spec:
  hosts:
  - "prometheus.local"
  gateways:
  - entrypoint-gateway
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: client
spec:
  hosts:
  - "client.local"
  gateways:
  - entrypoint-gateway
  http:
  - route:
    - destination:
        host: client.default.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: client
spec:
  host: client.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
      #mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: grafana
spec:
  host: grafana.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: prometheus
spec:
  host: prometheus.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
